--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,143 @@
 body {
-  background-color: bisque;
-  height: 100%;
+  background-color: #103c40;
+  width: 98vw;
+  height: 98vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.center {
-  height: 90vh;
+#header-bar {
+  position: absolute;
+  display: block;
+  left: 0;
+  right: 0;
+  line-height: 30px;
+  margin-top: 10px;
+  font-family: arial, sans-serif;
+  font-size: 13px;
+  color: #222;
+}
+
+.header-left {
+  padding-left: 15px;
+  float: left;
+}
+
+.header-right {
+  padding-right: 15px;
+  float: right;
+}
+
+.sign-in-button {
+  font-weight: bold;
+  border: 1px solid #4285f4;
+  border-radius: 2px;
+  background-color: #4683ea;
+  color: white;
+  padding: 0 12px;
+  line-height: 28px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+#main {
+  text-align: center;
+  font-family: arial, sans-serif;
+}
+
+#logo {
+  width: 15vw;
+  height: 25vh;
+}
+
+#search-box-outer {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  }
-  #inputs {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  #shortUrl {
-    margin-left: 10px;
-    display: flex;
-    flex-direction: column;
-  }
+  background-color: #fefefe;
+  font: 16px;
+  line-height: 34px;
+  height: 34px;
+  padding: 5px 8px 0 16px;
+  margin: 20px auto;
+  width: 584px;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 0 3px 8px 1px rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.18);
+
+  border-radius: 122px;
+}
+
+.search-box-inner {
+  border: none;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex: 100%;
+  height: 33px;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+input:focus {
+  outline-width: 0;
+}
+
+#main-buttons-div {
+  display: block;
+  padding-top: 6px;
+}
+
+.search-button {
+  align-items: flex-start;
+  background-color: #1a464a;
+  color: #fefefe;
+  font-size: 13px;
+  font-weight: bold;
+  height: 36px;
+  margin: 0px 4px;
+  padding: 0px 16px;
+  display: inline-block;
+  border: 1px solid #303134;;
+  border-radius: 4px;
+  border-width: 1px;
+  border-color: #f2f2f2;
+}
+
+.search-button:hover {
+  border-style: solid;
+  border-radius: 2px;
+  border-width: 1px;
+  border-color: rgb(198, 198, 198);
+  cursor: pointer;
+}
+
+#footer-bar {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #5f6368;
+  background-color: #f2f2f2;
+  font-size: 13px;
+  font-family: arial, sans-serif;
+  line-height: 40px;
+  border-top: 1px solid #e4e4e4;
+}
+
+.footer-left {
+  padding-left: 27px;
+  float: left;
+}
+
+.footer-right {
+  padding-right: 27px;
+  float: right;
+}
+
+.header-footer-link:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
